[gd_scene load_steps=2 format=2]

[ext_resource path="res://miau.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 423.358
margin_top = 48.0
margin_right = 471.358
margin_bottom = 62.0
text = "Pontos:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 472.0
margin_top = 48.0
margin_right = 512.0
margin_bottom = 62.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Label3" type="Label" parent="."]
visible = false
margin_left = 512.0
margin_top = 300.0
margin_right = 596.0
margin_bottom = 314.0
text = "!!!!!ESOL UOY"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
